recipe z-index fix

--- a/src/Components/Recipe/Recipe.scss
+++ b/src/Components/Recipe/Recipe.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 80vh;
     position: relative;
-    z-index: -1;
+    z-index: 0;
     @media (max-width: 575px) {
       height: 60vh;
     }
